{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 35,
  "lineage": "7e17cfef-8831-c11a-720f-c2bdd9e52979",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-038004094cfa6a32d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Private_subnet_a_vpc-07d8542a73315625d"
                ]
              }
            ],
            "id": "subnet-038004094cfa6a32d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819861602579",
            "state": "available",
            "tags": {
              "Name": "Private_subnet_a_vpc-07d8542a73315625d",
              "Network": "Private",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc_id": "vpc-07d8542a73315625d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-0d52a810b6628624d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Private_subnet_b_vpc-07d8542a73315625d"
                ]
              }
            ],
            "id": "subnet-0d52a810b6628624d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819861602579",
            "state": "available",
            "tags": {
              "Name": "Private_subnet_b_vpc-07d8542a73315625d",
              "Network": "Private",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc_id": "vpc-07d8542a73315625d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-0e965910336b87e69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Public_subnet_a_vpc-07d8542a73315625d"
                ]
              }
            ],
            "id": "subnet-0e965910336b87e69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819861602579",
            "state": "available",
            "tags": {
              "Name": "Public_subnet_a_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc_id": "vpc-07d8542a73315625d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-0bac64b0a95f3da4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.5.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Public_subnet_b_vpc-07d8542a73315625d"
                ]
              }
            ],
            "id": "subnet-0bac64b0a95f3da4a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819861602579",
            "state": "available",
            "tags": {
              "Name": "Public_subnet_b_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc_id": "vpc-07d8542a73315625d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:vpc/vpc-07d8542a73315625d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d38a75a78ad46503",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0f5ce1ef3ad924b66",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "My_VPC"
                ]
              }
            ],
            "id": "vpc-07d8542a73315625d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bce541c32147621a",
            "owner_id": "819861602579",
            "state": "available",
            "tags": {
              "Name": "My_VPC",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0279c3b3186e54acd",
            "arn": "arn:aws:ec2:us-east-1:819861602579:instance/i-0d1ae9b071408febd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1ae9b071408febd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "FirstKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b015450ac38ccbd",
            "private_dns": "ip-10-0-2-131.ec2.internal",
            "private_ip": "10.0.2.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f881ba106604b7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038004094cfa6a32d",
            "tags": {
              "Name": "DB-a"
            },
            "tags_all": {
              "Name": "DB-a",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064ec089f07a86262"
            ]
          },
          "dependencies": [
            "aws_security_group.DB_instnaces_access",
            "data.aws_ami.ubuntu-18",
            "data.aws_availability_zones.available",
            "data.aws_subnet.private0",
            "data.aws_subnet.private1",
            "data.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0279c3b3186e54acd",
            "arn": "arn:aws:ec2:us-east-1:819861602579:instance/i-0b5ed20da0f544a61",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5ed20da0f544a61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "FirstKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-052dbc29e3bc0f242",
            "private_dns": "ip-10-0-3-124.ec2.internal",
            "private_ip": "10.0.3.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0794dce4685e06e87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d52a810b6628624d",
            "tags": {
              "Name": "DB-b"
            },
            "tags_all": {
              "Name": "DB-b",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064ec089f07a86262"
            ]
          },
          "dependencies": [
            "aws_security_group.DB_instnaces_access",
            "data.aws_ami.ubuntu-18",
            "data.aws_availability_zones.available",
            "data.aws_subnet.private0",
            "data.aws_subnet.private1",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0279c3b3186e54acd",
            "arn": "arn:aws:ec2:us-east-1:819861602579:instance/i-0a7d2f04f0b8361d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdh",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:819861602579:key/f02a641b-8c85-46b2-a806-f254637f769a",
                "throughput": 0,
                "volume_id": "vol-07cb56c59c4ce3119",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7d2f04f0b8361d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "FirstKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01ca1c159b167164f",
            "private_dns": "ip-10-0-4-159.ec2.internal",
            "private_ip": "10.0.4.159",
            "public_ip": "3.93.79.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc1ee62bb6a016a9",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e965910336b87e69",
            "tags": {
              "Name": "nginx-web-a"
            },
            "tags_all": {
              "Name": "nginx-web-a",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c11df01c948c9ca5"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_instances_access",
            "data.aws_ami.ubuntu-18",
            "data.aws_availability_zones.available",
            "data.aws_subnet.public0",
            "data.aws_subnet.public1",
            "data.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0279c3b3186e54acd",
            "arn": "arn:aws:ec2:us-east-1:819861602579:instance/i-04733640b0a3b21e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdh",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:819861602579:key/f02a641b-8c85-46b2-a806-f254637f769a",
                "throughput": 0,
                "volume_id": "vol-05fc9b2ebeb724dde",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04733640b0a3b21e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "FirstKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02ed9bce338f8b0de",
            "private_dns": "ip-10-0-5-51.ec2.internal",
            "private_ip": "10.0.5.51",
            "public_ip": "54.80.148.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083e613ff5db91b49",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bac64b0a95f3da4a",
            "tags": {
              "Name": "nginx-web-b"
            },
            "tags_all": {
              "Name": "nginx-web-b",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c11df01c948c9ca5"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_instances_access",
            "data.aws_ami.ubuntu-18",
            "data.aws_availability_zones.available",
            "data.aws_subnet.public0",
            "data.aws_subnet.public1",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB_instnaces_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:security-group/sg-064ec089f07a86262",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-064ec089f07a86262",
            "ingress": [],
            "name": "DB-access",
            "name_prefix": "",
            "owner_id": "819861602579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB-access-vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "DB-access-vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_instances_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:security-group/sg-0c11df01c948c9ca5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c11df01c948c9ca5",
            "ingress": [],
            "name": "nginx-access",
            "name_prefix": "",
            "owner_id": "819861602579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-access-vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "nginx-access-vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DB_outbound_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-453635491",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-064ec089f07a86262",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DB_instnaces_access",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DB_ssh_acess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow ssh access from anywhere",
            "from_port": 22,
            "id": "sgrule-1002686829",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-064ec089f07a86262",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DB_instnaces_access",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nginx_http_acess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow http access from anywhere",
            "from_port": 80,
            "id": "sgrule-341988440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c11df01c948c9ca5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nginx_instances_access",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nginx_outbound_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-697851198",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c11df01c948c9ca5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nginx_instances_access",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nginx_ssh_acess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow ssh access from anywhere",
            "from_port": 22,
            "id": "sgrule-2733115885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c11df01c948c9ca5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nginx_instances_access",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}